--- a/Exoplanets-BG.ipynb
+++ b/Exoplanets-BG.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Predicting exoplanet radii\n",
     "## Phase 1: Data preparation and visualisation"
@@ -10,7 +14,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "__Group 179__\n",
     "\n",
@@ -21,21 +29,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Table of contents"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Introduction"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Dataset source\n",
     "The _KOI (Kepler Object of Interest) Cumulative List_ dataset used in this study was sourced from the [NASA Exoplanet Archive](https://exoplanetarchive.ipac.caltech.edu/docs/data.html). It contains measurements made by the Kepler telescope of stars suspected of hosting  transiting stars."
@@ -43,7 +63,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Dataset details\n"
    ]
@@ -1210,7 +1234,11 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -1221,14 +1249,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Columns that can be dropped"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "kepid, kepoi_name, kepler_name, koi_vet_stat ??, koi_vet_date, koi_pdisposition, koi_disposition (after filtering), koi_score, koi_fpflag_nt, koi_fpflag_ss, koi_fpflag_co, koi_fpflag_ec, koi_disp_prov, koi_comment, koi_time0bk, koi_time0, koi_ror !!, koi_fittype, koi_parm_prov, koi_tce_plnt_num ??, koi_tce_delivname ??, koi_quarters, koi_trans_mod, koi_model_dof, koi_datalink_dvr, koi_datalink_dvs, koi_sparprov ??, "
    ]
@@ -1236,7 +1272,11 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1524,7 +1564,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Remove observations marked as FALSE POSITIVE"
    ]
@@ -1532,7 +1576,11 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1552,7 +1600,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Remove observations with high uncertainty"
    ]
@@ -1560,7 +1612,11 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "acceptable_perc_uncertainty = 0.5"
@@ -1569,7 +1625,11 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "columns_with_error_range = [c.removesuffix('_err1') for c in list(df) if c.endswith('_err1')]"
@@ -1577,7 +1637,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "__NEED TO INCLUDE THE COLUMNS THAT HAVE A SINGLE ERROR VALUE, e.g. koi_dikco_msky_err__"
    ]
@@ -1585,7 +1649,11 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "for col in columns_with_error_range:\n",
@@ -1602,7 +1670,11 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "columns_with_error_pc = [c for c in list(df) if c.endswith('_pc')]"
@@ -1611,7 +1683,11 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#dfiltered = df[(df[columns_with_error_pc] > acceptable_perc_uncertainty).any(axis=1)]\n",
@@ -1621,7 +1697,11 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1641,7 +1721,11 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -4324,7 +4408,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
